syntax = "proto3";

package gameProto;

import "Character.proto"

message Sync_Character {
	gameProto.Character character = 1;
}